# ipfs-proof-oracle

./: .env  .gitignore  Cargo.toml  README.md  bucket.sh  deploy.sh  invoke.sh
src/: main.rs  oracle.rs
src/oracle/: backend.rs
tests/: add_test.sh  test_list.txt
