[package]
name = "ipfs-proof-oracle"
version = "0.1.0"
edition = "2021"
autobins = false

[[bin]]
name = "bootstrap"
path = "src/main.rs"

# Use cargo-edit(https://github.com/killercup/cargo-edit#installation)
# to manage dependencies.
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
bs58 = "0.4.0"
koibumi-base32 = "0.0.2"
cid = "0.7.0"
bao = "0.12.0"
blake3 = "1.3.1"
hex = "0.4.3"
futures = "0.3.21"
http = "0.2.8"
ipfs-api = "0.15.0"
ipfs-api-backend-hyper = "0.4"
lambda_runtime = "0.5.1"
serde = "1.0.136"
serde_json = "1.0"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }


